--- a/pages/video.html
+++ b/pages/video.html
@@ -1,8 +1,6 @@
 <html>
     <body>
-                <embed src="//player.video.iqiyi.com/5996739653f1eaa1d4f6ae1790448c04/0/0/v_19rs8vbs1s.swf-albumId=2714429100-tvId=2714429100-isPurchase=0-cnId=undefined" 
-                allowFullScreen="true" quality="high" width="480" height="350" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
-            <video width="800" src="1.mp4" controls>
+            <video src="../videos/video1.mp4" controls>
                     <p>你的浏览器不支持 HTML5 视频。可点击<a href="http://www.iqiyi.com/v_19rs8vbs1s.html">此链接</a>观看</p>
                   </video>
             <p>Japanese example: <span lang="jp">ご飯が熱い。</span>.</p>
