--- a/pages/py3.html
+++ b/pages/py3.html
@@ -3,7 +3,7 @@
         <title>Super@_@</title>
         <meta charset="UTF-8">
     </head>
-    <body>
+    <body bgcolor="yellow">
         <h1>Picture</h1>
         <p>1.jpg</p>
         <img src="../images/1.jpg" width="225" height="225" border="10" alt="Picture"> 
