--- a/pages/py4.html
+++ b/pages/py4.html
@@ -3,7 +3,7 @@
         <title>Table</title>
         <meta charset="UTF-8">
     </head>
-    <body>
+    <body bgcolor="yellow">
         <center><h1><font color="gray">Table</font></h1></center>
         <table frame="border" width="800" align="center" boarder="1" rules="all" cellpadding="15">
             <tr>
