--- a/pages/py5.html
+++ b/pages/py5.html
@@ -7,7 +7,7 @@
         <link rel="StyleSheet" type="text/css" href="style.css">
         <script src="jsscript.js"></script>
     </head>
-    <body>
+    <body bgcolor="yellow">
         <h1>CSS background-color</h1>
         <div>
             Div
