--- a/pages/text.html
+++ b/pages/text.html
@@ -4,7 +4,7 @@
         <title>Text</title>
         <link rel="shortcut icon" href="../images/1.jpg" type="image/x-icon">
     </head>
-    <body>
+    <body bgcolor="yellow">
             <h1>三国演义</h1>
 
             <p>罗贯中</p>
