--- a/pages/video.html
+++ b/pages/video.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="yellow">
             <video src="../videos/video1.mp4" controls>
                     <p>你的浏览器不支持 HTML5 视频。可点击<a href="http://www.iqiyi.com/v_19rs8vbs1s.html">此链接</a>观看</p>
                   </video>
