--- a/pages/py.html
+++ b/pages/py.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="shortcut icon" href="../images/1.jpg" type="image/x-icon">
     </head>
-    <body>
+    <body bgcolor="yellow">
         文档设置标记<br>
         <p>This is paragh.</p>
         <p>This is paragh.</p>
