--- a/pages/py2.html
+++ b/pages/py2.html
@@ -3,7 +3,7 @@
         <title>^_^</title>
         <meta charset="UTF-8">
     </head>
-    <body>
+    <body bgcolor="yellow">
         Title---->>
         <br>
         <h1>Title</h1>
