--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 
 
 
+
+
+
+
+
+            
+
         </pre>
+        <center><img src="images/tellyou.jpg" width="100" height="100"></center>
+        <center><font size="1" color="red">这是个黄色网站</font></center>
     </body>
 </html>
