--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
 
 
 
-
-
-
-
-
-
-            
-
         </pre>
+        <center><a href="pages/video.html" target="_self"><strong>Video</strong></a></center>
+        <pre>
+
+
+
+
+        </pre>    
         <center><img src="images/tellyou.jpg" width="100" height="100"></center>
         <center><font size="1" color="red">这是个黄色网站</font></center>
     </body>
