--- a/pages/video.html
+++ b/pages/video.html
@@ -1,7 +1,7 @@
 <html>
     <body bgcolor="yellow">
             <video width="800" height="600" controls>
-                        <source src="../videos/q1.ogg" type="video/ogg">
+                        <source src="../videos/q1.Ogg" type="video/ogg">
                     <source src="../videos/q1.mp4" type="video/mp4">
                     <p>你的浏览器不支持 HTML5 视频。可点击<a href="../videos/q1.mp4">此链接</a>观看</p>
                   </video>
