--- a/index.html
+++ b/index.html
@@ -2,40 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>HTML Learn</title>
-        <link rel="shortcut icon" href="images/1.jpg" type="image/x-icon">
+        <title>JS Learn</title>
+        <script src="scripts/script.js" async></script>
     </head>
-    <body bgcolor="yellow">
-        <pre>
-
-
-
-
-
-
-
-
-
-        </pre>
-        <center>
-            <h1 color="blue">
-                <font size="64" face="Bold"><a href="pages/py.html" target="_self">Welcome</a></font>
-            </h1>
-        </center>
-        <pre>
-
-
-
-
-        </pre>
-        <center><a href="pages/video.html" target="_self"><strong>Video</strong></a></center>
-        <pre>
-
-
-
-
-        </pre>    
-        <center><img src="images/tellyou.jpg" width="100" height="100"></center>
-        <center><font size="1" color="red">这是个黄色网站</font></center>
+    <body>
+        <button type="button">Click</button>
     </body>
 </html>
